# indexed

./: .gitignore  CHANGELOG.markdown  README.markdown  indexed.cabal
examples/: FH.hs
src/Indexed/: Applicative.hs  Command.hs  Comonad.hs  Constraints.hs  Coproduct.hs  Foldable.hs  Functor.hs  Group.hs  Map.hs  Monad.hs  Monoid.hs  Ord.hs  Product.hs  Show.hs  Thrist.hs  Traversable.hs  Types.hs
src/Indexed/Comonad/: Store.hs
src/Indexed/Monad/: Free.hs
src/Kind/: Constraint.hs
